[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/fonts/montserrat_bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/game_over/game_over.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/montserrat_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/main_menu/main_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/game_over/game_over_failed.png" type="Texture" id=5]
[ext_resource path="res://ui/game_over/game_over_success.png" type="Texture" id=6]
[ext_resource path="res://ui/shared/sky.png" type="Texture" id=7]
[ext_resource path="res://ui/game_over/score_background.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
_main_menu_scene = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="Success" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Failed" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Title" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -452.0
margin_top = 442.0
margin_right = 1468.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreBackground" type="TextureRect" parent="."]
margin_left = 1100.0
margin_top = 550.0
margin_right = 1800.0
margin_bottom = 950.0
texture = ExtResource( 8 )
expand = true

[node name="Scores" type="VBoxContainer" parent="ScoreBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/separation = 50
alignment = 1

[node name="CollectibleScore" type="Control" parent="ScoreBackground/Scores"]
margin_top = 43.0
margin_right = 600.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScoreBackground/Scores/CollectibleScore"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.5
margin_right = 199.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "Score"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="ScoreBackground/Scores/CollectibleScore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -30.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeScore" type="Control" parent="ScoreBackground/Scores"]
margin_top = 93.0
margin_right = 600.0
margin_bottom = 93.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScoreBackground/Scores/TimeScore"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.5
margin_right = 199.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "Time"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="ScoreBackground/Scores/TimeScore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -30.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthScore" type="Control" parent="ScoreBackground/Scores"]
margin_top = 143.0
margin_right = 600.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScoreBackground/Scores/HealthScore"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.5
margin_right = 199.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "Health"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="ScoreBackground/Scores/HealthScore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -30.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="Label" parent="ScoreBackground/Scores"]
margin_top = 193.0
margin_right = 600.0
margin_bottom = 207.0

[node name="TotalScore" type="Control" parent="ScoreBackground/Scores"]
margin_top = 257.0
margin_right = 600.0
margin_bottom = 257.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScoreBackground/Scores/TotalScore"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.5
margin_right = 199.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 3 )
text = "Total"
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="Label" parent="ScoreBackground/Scores/TotalScore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -30.5
margin_bottom = 30.5
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_bottom = -166.0
custom_fonts/font = SubResource( 4 )
text = "Use tractor beam to return to main menu"
align = 1
uppercase = true

[node name="InputTimeout" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
__meta__ = {
"_editor_description_": "Time until input will be processed"
}

[connection signal="timeout" from="InputTimeout" to="." method="_on_InputTimeout_timeout"]
